<resources>
    <string name="app_name">MuhammedSalmanNewAge</string>
    <string name="calculate">Calculate</string>
    <string name="fragment_bmi_details_label">Add BMI Details</string>
    <string name="fragment_bmi_results_label">BMI Details</string>
    <string name="details_entry">Enter Personal Detail</string>
    <string name="name_placeholder">Name</string>
    <string name="calculate_bmi_msg">Calculate Your Body Mass Index</string>
    <string name="weight_metric">Weight</string>
    <string name="height_metric">Height</string>
    <string name="gender_metric">Gender</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="install">INSTALL</string>
    <string name="bmi">BODY MASS INDEX</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>

    <string name="bmi_name_with_type">Hello %s, you are %s</string>
    <string name="bmi_range">%s BMI range: %.2fkg/m2 - %.2fkg/m2</string>
    <string name="bmi_range_obese">Obese BMI range: %.2fkg and above</string>
    <string name="ponderal_index">Ponderal Index: %.2fkg/m3</string>
    <string name="ad_attribution">Ad</string>
</resources>