<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/window_center_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/details_header"
        style="@style/Headline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_entry"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/PrimaryInputFieldLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/name_input_mar_horiz"
        android:layout_marginTop="@dimen/name_input_mar_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:imeOptions="actionGo"
            android:padding="@dimen/name_input_box_padding"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        style="@style/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/calculate_bmi_msg"
        android:textColor="@color/grey_alpha_80"
        app:layout_constraintBottom_toTopOf="@+id/window_center_gl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/weight_label"
        style="@style/MetricsLabelTextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/metrics_mar_top"
        android:fontFamily="@font/work_sans"
        android:text="@string/weight_metric"
        app:layout_constraintEnd_toStartOf="@+id/height_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/window_center_gl" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/height_label"
        style="@style/MetricsLabelTextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_metric"
        app:layout_constraintEnd_toStartOf="@+id/gender_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/weight_label"
        app:layout_constraintTop_toTopOf="@+id/weight_label" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gender_label"
        style="@style/MetricsLabelTextAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_metric"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/height_label"
        app:layout_constraintTop_toTopOf="@+id/weight_label" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:cardElevation="7dp"
        app:layout_constraintTop_toBottomOf="@+id/height_label"
        tools:layout_editor_absoluteX="-16dp">

        <!-- TODO Implement 3 Recyclerviews for metrics -->

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/calc_btn_mar_horiz"
        android:layout_marginTop="@dimen/calc_btn_mar_top"
        android:text="@string/calculate"
        style="@style/PrimaryButton"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />


</androidx.constraintlayout.widget.ConstraintLayout>